--- a/styles.css
+++ b/styles.css
@@ -508,7 +508,7 @@ input[type=radio] {
         flex-direction: column;
         padding-top: 80px;
         padding-bottom: 40px;
-        height: 100svh; /* Full screen height */
+        height: 100vh; /* Full screen height */
     }
     .right-column{
         height: fit-content;
